@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,10 +24,11 @@
  */
 package jdk.internal.foreign.abi;
 
-import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-
 import jdk.internal.foreign.MemorySessionImpl;
+import jdk.internal.foreign.Utils;
+
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 
 public final class UpcallStubs {
 
@@ -36,7 +37,7 @@ public final class UpcallStubs {
 
     private static void freeUpcallStub(long stubAddress) {
         if (!freeUpcallStub0(stubAddress)) {
-            throw new IllegalStateException("Not a stub address: " + stubAddress);
+            throw new IllegalStateException("Not a stub address: " + Utils.toHexString(stubAddress));
         }
     }
 
@@ -50,13 +51,14 @@ public final class UpcallStubs {
         registerNatives();
     }
 
-    static MemorySegment makeUpcall(long entry, SegmentScope scope) {
-        ((MemorySessionImpl) scope).addOrCleanupIfFail(new MemorySessionImpl.ResourceList.ResourceCleanup() {
+    @SuppressWarnings("restricted")
+    static MemorySegment makeUpcall(long entry, Arena arena) {
+        MemorySessionImpl.toMemorySession(arena).addOrCleanupIfFail(new MemorySessionImpl.ResourceList.ResourceCleanup() {
             @Override
             public void cleanup() {
                 freeUpcallStub(entry);
             }
         });
-        return MemorySegment.ofAddress(entry, 0, scope);
+        return MemorySegment.ofAddress(entry).reinterpret(arena, null); // restricted
     }
 }
