@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1999, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1999, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
 
 package javax.swing;
 
-import java.applet.Applet;
 import java.awt.BorderLayout;
 import java.awt.Component;
 import java.awt.Container;
@@ -39,7 +38,6 @@ import java.awt.Toolkit;
 import java.awt.Window;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
-import java.security.AccessController;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -275,7 +273,6 @@ public class PopupFactory {
      * Obtains the appropriate <code>Popup</code> based on
      * <code>popupType</code>.
      */
-    @SuppressWarnings("removal")
     private Popup getPopup(Component owner, Component contents,
                            int ownerX, int ownerY, int popupType) {
         if (GraphicsEnvironment.isHeadless()) {
@@ -289,11 +286,6 @@ public class PopupFactory {
             return getMediumWeightPopup(owner, contents, ownerX, ownerY);
         case HEAVY_WEIGHT_POPUP:
             Popup popup = getHeavyWeightPopup(owner, contents, ownerX, ownerY);
-            if ((AccessController.doPrivileged(OSInfo.getOSTypeAction()) ==
-                OSInfo.OSType.MACOSX) && (owner != null) &&
-                (EmbeddedFrame.getAppletIfAncestorOf(owner) != null)) {
-                ((HeavyWeightPopup)popup).setCacheEnabled(false);
-            }
             return popup;
         }
         return null;
@@ -435,10 +427,8 @@ public class PopupFactory {
                 } else {
                     return null;
                 }
-                if (cache.size() > 0) {
-                    HeavyWeightPopup r = cache.get(0);
-                    cache.remove(0);
-                    return r;
+                if (!cache.isEmpty()) {
+                    return cache.removeFirst();
                 }
                 return null;
             }
@@ -539,8 +529,8 @@ public class PopupFactory {
         }
 
         /**
-         * As we recycle the <code>Window</code>, we don't want to dispose it,
-         * thus this method does nothing, instead use <code>_dipose</code>
+         * As we recycle the <code>Window</code>, we don't want to dispose of it,
+         * thus this method does nothing, instead use <code>_dispose</code>
          * which will handle the disposing.
          */
         void dispose() {
@@ -630,7 +620,6 @@ public class PopupFactory {
          * Returns true if popup can fit the screen and the owner's top parent.
          * It determines can popup be lightweight or mediumweight.
          */
-        @SuppressWarnings("removal")
         boolean fitsOnScreen() {
             boolean result = false;
             Component component = getComponent();
@@ -660,12 +649,6 @@ public class PopupFactory {
                         result = parentBounds
                                 .contains(x, y, popupWidth, popupHeight);
                     }
-                } else if (parent instanceof JApplet) {
-                    Rectangle parentBounds = parent.getBounds();
-                    Point p = parent.getLocationOnScreen();
-                    parentBounds.x = p.x;
-                    parentBounds.y = p.y;
-                    result = parentBounds.contains(x, y, popupWidth, popupHeight);
                 }
             }
             return result;
@@ -778,10 +761,8 @@ public class PopupFactory {
         private static LightWeightPopup getRecycledLightWeightPopup() {
             synchronized (LightWeightPopup.class) {
                 List<LightWeightPopup> lightPopupCache = getLightWeightPopupCache();
-                if (lightPopupCache.size() > 0) {
-                    LightWeightPopup r = lightPopupCache.get(0);
-                    lightPopupCache.remove(0);
-                    return r;
+                if (!lightPopupCache.isEmpty()) {
+                    return lightPopupCache.removeFirst();
                 }
                 return null;
             }
@@ -801,7 +782,6 @@ public class PopupFactory {
             recycleLightWeightPopup(this);
         }
 
-        @SuppressWarnings("removal")
         public void show() {
             Container parent = null;
 
@@ -822,11 +802,6 @@ public class PopupFactory {
                     if (parent == null) {
                         parent = p;
                     }
-                    break;
-                } else if (p instanceof JApplet) {
-                    // Painting code stops at Applets, we don't want
-                    // to add to a Component above an Applet otherwise
-                    // you'll never see it painted.
                     break;
                 }
             }
@@ -936,10 +911,8 @@ public class PopupFactory {
         private static MediumWeightPopup getRecycledMediumWeightPopup() {
             synchronized (MediumWeightPopup.class) {
                 List<MediumWeightPopup> mediumPopupCache = getMediumWeightPopupCache();
-                if (mediumPopupCache.size() > 0) {
-                    MediumWeightPopup r = mediumPopupCache.get(0);
-                    mediumPopupCache.remove(0);
-                    return r;
+                if (!mediumPopupCache.isEmpty()) {
+                    return mediumPopupCache.removeFirst();
                 }
                 return null;
             }
@@ -956,7 +929,6 @@ public class PopupFactory {
             recycleMediumWeightPopup(this);
         }
 
-        @SuppressWarnings("removal")
         public void show() {
             Component component = getComponent();
             Container parent = null;
@@ -969,7 +941,7 @@ public class PopupFactory {
               if it has a layered pane,
               add to that, otherwise
               add to the window. */
-            while (!(parent instanceof Window || parent instanceof Applet) &&
+            while (!(parent instanceof Window) &&
                    (parent!=null)) {
                 parent = parent.getParent();
             }
@@ -1030,4 +1002,3 @@ public class PopupFactory {
         }
     }
 }
-
