@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,6 @@ import javax.xml.transform.sax.SAXTransformerFactory;
 import javax.xml.transform.sax.TransformerHandler;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Document;
 import org.xml.sax.helpers.AttributesImpl;
@@ -38,11 +37,9 @@ import org.xml.sax.helpers.AttributesImpl;
  * @test
  * @bug 6451633
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.sax.Bug6451633
  * @run testng/othervm transform.sax.Bug6451633
  * @summary Test TransformerHandler ignores empty text node.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class Bug6451633 {
 
     @Test
