@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,17 +23,19 @@
 
 package handle.lookup;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
+import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.SymbolLookup;
 
 import java.nio.file.Path;
+import java.util.function.Consumer;
 
 import org.testng.annotations.*;
 
@@ -48,23 +50,39 @@ public class MethodHandleLookup {
     static Object[][] restrictedMethods() {
         try {
             return new Object[][]{
-                    { MethodHandles.lookup().findStatic(Linker.class, "nativeLinker",
-                            MethodType.methodType(Linker.class)), "Linker::nativeLinker" },
-                    { MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                            MethodType.methodType(MemorySegment.class, long.class, long.class)),
-                            "MemorySegment::ofAddress/2" },
-                    { MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                            MethodType.methodType(MemorySegment.class, long.class, long.class, SegmentScope.class)),
-                            "MemorySegment::ofAddress/3" },
-                    { MethodHandles.lookup().findStatic(MemorySegment.class, "ofAddress",
-                            MethodType.methodType(MemorySegment.class, long.class, long.class, SegmentScope.class, Runnable.class)),
-                            "MemorySegment::ofAddress/4" },
+                    { MethodHandles.lookup().findVirtual(Linker.class, "downcallHandle",
+                            MethodType.methodType(MethodHandle.class, FunctionDescriptor.class, Linker.Option[].class)), "Linker::downcallHandle/1" },
+                    { MethodHandles.lookup().findVirtual(Linker.class, "downcallHandle",
+                            MethodType.methodType(MethodHandle.class, MemorySegment.class, FunctionDescriptor.class, Linker.Option[].class)), "Linker::downcallHandle/2" },
+                    { MethodHandles.lookup().findVirtual(Linker.class, "upcallStub",
+                            MethodType.methodType(MemorySegment.class, MethodHandle.class, FunctionDescriptor.class, Arena.class, Linker.Option[].class)), "Linker::upcallStub" },
+                    { MethodHandles.lookup().findVirtual(MemorySegment.class, "reinterpret",
+                            MethodType.methodType(MemorySegment.class, long.class)),
+                            "MemorySegment::reinterpret/1" },
+                    { MethodHandles.lookup().findVirtual(MemorySegment.class, "reinterpret",
+                            MethodType.methodType(MemorySegment.class, Arena.class, Consumer.class)),
+                            "MemorySegment::reinterpret/2" },
+                    { MethodHandles.lookup().findVirtual(MemorySegment.class, "reinterpret",
+                            MethodType.methodType(MemorySegment.class, long.class, Arena.class, Consumer.class)),
+                            "MemorySegment::reinterpret/3" },
                     { MethodHandles.lookup().findStatic(SymbolLookup.class, "libraryLookup",
-                            MethodType.methodType(SymbolLookup.class, String.class, SegmentScope.class)),
+                            MethodType.methodType(SymbolLookup.class, String.class, Arena.class)),
                             "SymbolLookup::libraryLookup(String)" },
                     { MethodHandles.lookup().findStatic(SymbolLookup.class, "libraryLookup",
-                            MethodType.methodType(SymbolLookup.class, Path.class, SegmentScope.class)),
+                            MethodType.methodType(SymbolLookup.class, Path.class, Arena.class)),
                             "SymbolLookup::libraryLookup(Path)" },
+                    { MethodHandles.lookup().findStatic(System.class, "load",
+                            MethodType.methodType(void.class, String.class)),
+                            "System::load" },
+                    { MethodHandles.lookup().findStatic(System.class, "loadLibrary",
+                            MethodType.methodType(void.class, String.class)),
+                            "System::loadLibrary" },
+                    { MethodHandles.lookup().findVirtual(Runtime.class, "load",
+                            MethodType.methodType(void.class, String.class)),
+                            "Runtime::load" },
+                    { MethodHandles.lookup().findVirtual(Runtime.class, "loadLibrary",
+                            MethodType.methodType(void.class, String.class)),
+                            "Runtime::loadLibrary" }
             };
         } catch (Throwable ex) {
             throw new ExceptionInInitializerError((ex));
