@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,7 +37,7 @@ import jdk.test.lib.Utils;
 /**
  * @test
  * @summary Tests that the RecordedEvent.getThread() returns th expected info
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.consumer.TestRecordedEventGetThreadOther
@@ -85,7 +85,7 @@ public class TestRecordedEventGetThreadOther {
         List<RecordedEvent> events = RecordingFile.readAllEvents(dumpFilePath);
         Asserts.assertEquals(events.size(), 1);
 
-        RecordedEvent event = events.get(0);
+        RecordedEvent event = events.getFirst();
         RecordedThread recordedThread = event.getThread();
 
         Asserts.assertNotNull(recordedThread);
