@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,7 +39,7 @@ import jdk.test.lib.jfr.SimpleEvent;
 /**
  * @test
  * @summary Simple test for RecordedFrame APIs
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.consumer.TestRecordedFrame
@@ -68,7 +68,7 @@ public final class TestRecordedFrame {
 
             List<RecordedEvent> recordedEvents = Events.fromRecording(recording);
             Events.hasEvents(recordedEvents);
-            RecordedEvent recordedEvent = recordedEvents.get(0);
+            RecordedEvent recordedEvent = recordedEvents.getFirst();
 
             RecordedStackTrace stacktrace = recordedEvent.getStackTrace();
             List<RecordedFrame> frames = stacktrace.getFrames();
