@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,7 @@ import jdk.test.lib.process.ProcessTools;
 
 /**
  * @test
- * @key jfr
+ * @requires vm.flagless
  * @summary Verifies that data associated with a running recording can be evacuated to an hs_err_pidXXX.jfr when the VM crashes
  * @requires vm.hasJFR
  *
@@ -74,7 +74,26 @@ public class TestDumpOnCrash {
         }
     }
 
+    /*
+     * We don't run if -esa is specified, because parser invariants are not
+     * guaranteed for emergency dumps, which are provided on a best-effort basis only.
+     */
+    private static boolean hasIncompatibleTestOptions() {
+        String testVmOpts[] = System.getProperty("test.vm.opts","").split("\\s+");
+        for (String s : testVmOpts) {
+            if (s.equals("-esa")) {
+                System.out.println("Incompatible option: " + s + " specified. Skipping test.");
+                return true;
+            }
+        }
+        return false;
+    }
+
     public static void main(String[] args) throws Exception {
+        if (hasIncompatibleTestOptions()) {
+            return;
+        }
+
         // Test without dumppath
         test(CrasherIllegalAccess.class, "", true, null, true);
         test(CrasherIllegalAccess.class, "", false, null, true);
@@ -131,7 +150,7 @@ public class TestDumpOnCrash {
         }
         options.add(crasher.getName());
         options.add(signal);
-        Process p = ProcessTools.createTestJvm(options).start();
+        Process p = ProcessTools.createTestJavaProcessBuilder(options).start();
 
         OutputAnalyzer output = new OutputAnalyzer(p);
         System.out.println("========== Crasher process output:");
@@ -153,7 +172,7 @@ public class TestDumpOnCrash {
 
             List<RecordedEvent> events = RecordingFile.readAllEvents(file);
             Asserts.assertFalse(events.isEmpty(), "No event found");
-            System.out.printf("Found event %s%n", events.get(0).getEventType().getName());
+            System.out.printf("Found event %s%n", events.getFirst().getEventType().getName());
 
             Files.delete(file);
         } else {
