@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,7 @@
  * @modules jdk.compiler/com.sun.tools.javac.api
  *          jdk.compiler/com.sun.tools.javac.main
  *          jdk.compiler/com.sun.tools.javac.util
- *          jdk.jdeps/com.sun.tools.classfile
+ *          java.base/jdk.internal.classfile.impl
  * @build toolbox.ToolBox InMemoryFileManager TestBase
  * @build LineNumberTestBase TestCase
  * @run main RuleSwitchBreaks
@@ -81,7 +81,7 @@ public class RuleSwitchBreaks extends LineNumberTestBase {
                      """,
                      List.of(1, 3, 4, 5, 6, 7, 9, 11),
                      true,
-                     List.of("--enable-preview", "-source", System.getProperty("java.specification.version")),
+                     List.of(),
                      "TestGuards")
     };
 
