@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,9 +23,9 @@
 
 /*
  * @test
- * @bug 8210009
- * @summary Source Launcher classloader should support getResource and getResourceAsStream
- * @modules jdk.compiler jdk.jdeps
+ * @bug 8210009 8321739 8336470
+ * @summary Source Launcher classloader should support getResource/s and getResourceAsStream
+ * @modules jdk.compiler
  * @library /tools/lib
  * @build toolbox.JavaTask toolbox.ToolBox
  * @run main GetResourceTest
@@ -39,22 +39,20 @@ import toolbox.Task;
 import toolbox.ToolBox;
 
 /*
- * The body of this test is in ${test.src}/src/CLTest.java,
- * which is executed in single-file source-launcher mode,
+ * The body of this test is in ${test.src}/src/p/q/CLTest.java,
+ * which is executed in source-launcher mode,
  * in order to test the classloader used to launch such programs.
  */
 public class GetResourceTest {
-    public static void main(String... args) throws Exception {
+    public static void main(String... args) {
         GetResourceTest t = new GetResourceTest();
         t.run();
     }
 
-    void run() throws Exception {
+    void run() {
         ToolBox tb = new ToolBox();
-        Path file = Paths.get(tb.testSrc).resolve("src").resolve("CLTest.java");
+        Path file = Paths.get(tb.testSrc).resolve("src/p/q").resolve("CLTest.java");
         new JavaTask(tb)
-            .vmOptions("--add-modules", "jdk.jdeps",
-                       "--add-exports", "jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED")
             .className(file.toString()) // implies source file mode
             .run(Task.Expect.SUCCESS)
             .writeAll();
